--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "auth-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "auth-app-latest",
+  "version": "0.2.1",
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
+    "@okta/okta-auth-js": "^5.9.0",
+    "@okta/okta-react": "^6.3.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "encoding": "^0.1.13",
+    "react-bootstrap": "^2.0.2",
+    "sass": "^1.44.0",
     "web-vitals": "^1.1.2"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "rollup --config"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +35,46 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-html": "^0.2.4",
+    "@rollup/plugin-node-resolve": "^13.1.1",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-url": "^6.1.0",
+    "@svgr/rollup": "^6.1.2",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "postcss": "^8.4.5",
+    "react-scripts": "4.0.3",
+    "rollup": "^2.61.1",
+    "rollup-plugin-bundle-scss": "^0.1.3",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-sass": "^1.2.10",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-typescript2": "^0.31.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
+  },
+  "files": [
+    "dist"
+  ]
 }
